--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "start": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html"
+    "start": "rm -rf dist && rm -rf .parcel-cache && parcel ./src/index.html",
+    "predeploy": "rm -rf dist && rm -rf .parcel-cache && parcel build ./src/index.html --public-url /synbim-fluid-simulation",
+    "deploy": "gh-pages -d dist"
   },
   "license": "MIT",
   "dependencies": {
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.1",
+    "gh-pages": "^3.1.0",
     "parcel": "^2.0.0-alpha.3.2"
   },
   "babel": {
