--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "synbim-web-app",
+  "name": "synbim-fluid-simulation",
   "version": "0.1.0",
-  "description": "",
+  "description": "A web-based fluid flow simulation tool for advection-diffusion problems.",
   "scripts": {
     "start": "rm -rf dist && rm -rf .parcel-cache && parcel ./src/index.html",
     "predeploy": "rm -rf dist && rm -rf .parcel-cache && parcel build ./src/index.html --public-url /synbim-fluid-simulation",
