--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react-range": "^1.6.7"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.1",
     "gh-pages": "^3.1.0",
     "parcel": "^2.0.0-alpha.3.2"
   },
   "babel": {
     "presets": [
+      "@babel/preset-env",
       "@babel/preset-react"
     ]
   }
