--- a/package.json
+++ b/package.json
@@ -3,24 +3,32 @@
   "version": "0.1.0",
   "description": "A web-based fluid flow simulation tool for advection-diffusion problems.",
   "scripts": {
-    "start": "rm -rf dist && rm -rf .parcel-cache && parcel ./src/index.html",
-    "predeploy": "rm -rf dist && rm -rf .parcel-cache && parcel build ./src/index.html --public-url /synbim-fluid-simulation",
+    "clean": "rimraf dist && rimraf .parcel-cache",
+    "prestart": "npm run clean",
+    "start": "parcel ./src/index.html",
+    "predeploy": "npm run clean && parcel build ./src/index.html --public-url /synbim-fluid-simulation",
     "deploy": "gh-pages -d dist",
-    "prebuild": "rm -rf dist && rm -rf .parcel-cache",
+    "prebuild": "npm run clean",
     "build": "parcel build ./src/index.html"
   },
   "license": "MIT",
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-range": "^1.6.7"
+    "raf": "^3.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-range": "^1.8.12"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "gh-pages": "^3.1.0",
-    "parcel": "^2.0.0-beta.1"
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@parcel/packager-raw-url": "^2.3.2",
+    "@parcel/transformer-webmanifest": "^2.3.2",
+    "gh-pages": "^3.2.3",
+    "parcel": "^2.3.2",
+    "process": "^0.11.10",
+    "rimraf": "^3.0.2"
   },
   "babel": {
     "presets": [
