--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lattice-boltzmann-simulator",
-  "version": "0.2.0",
-  "description": "A WebGL fluid simulation tool implementing the lattice Boltzmann method (LBM) for advection-diffusion problems.",
+  "version": "0.3.0",
+  "description": "A WebGL2 fluid simulation tool implementing the lattice Boltzmann method (LBM) for advection-diffusion problems.",
   "scripts": {
     "clean": "rimraf dist && rimraf .parcel-cache",
     "prestart": "npm run clean",
@@ -17,7 +17,8 @@
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-range": "^1.8.12"
+    "react-range": "^1.8.12",
+    "twgl.js": "^4.21.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
